<resources>
    <string name="app_name">Drugs Organiser</string>
    <string name="welcome">Welcome!</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_prompt">Login:</string>
    <string name="password_prompt">Password:</string>
    <string name="otherDoseTypePrompt">Please provide your unit of dosing:</string>
    <string name="drugCommentPrompt">Additional information:</string>
    <string name="mail_prompt">E-mail:</string>
    <string name="invalid_login_or_password">Invalid login or password, try again!</string>
    <string name="fields_must_be_filled">All fields must be properly filled!</string>
    <string name="login_exists_warning">Account with such login already exists, please choose another one!</string>
    <string name="mail_already_in_use_warning">This mail address is already used by another account!</string>
    <string name="account_created">Your account has been successfully created!</string>
    <string name="login_successfull">Login successfull!</string>
    <string name="title_activity_drugs">DrugsActivity</string>
    <string name="current_user" translatable="false">CURRENT_USER</string>
    <string name="my_drugs">My drugs</string>
    <string name="schedule">Schedule</string>
    <string name="archive">Registry</string>
    <string name="contact_person">Contact person</string>
    <string name="change_contact_person">Change contact person</string>
    <string name="lack_of_contact_person">Please, choose your Contact Person.</string>
    <string name="call_contact_person">Call contact person</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="delete_confirmation">Drug successfully deleted!</string>
    <string name="add_confirmation">Drug successfully added!</string>
    <string name="edit_confirmation">Drug successfully updated!</string>
    <string name="drug_name">Drug name:</string>
    <string name="drug_dose">Dose:</string>
    <string name="drug_dosage">Type of dosage:</string>
    <string name="drug_start">Start</string>
    <string name="drug_peroid">Duration</string>
    <string name="drug_interval">Interval between doses</string>
    <string name="drug_important">This drug is important</string>
    <string name="new_item_dialog_title">Add new drug</string>
    <string name="edit_item_dialog_title">Edit drug</string>
    <string name="delete_item_dialog_title">Delete drug</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="FewTimesPer">A few times per:</string>
    <string name="FewTimesPer2">a few times per</string>
    <string name="Frequency">Frequency:</string>
    <string name="chooseFrequency">Choose frequency:</string>
    <string name="addANewTerm">ADD A NEW TERM</string>
    <string name="terms">Terms:</string>
    <string name="chooseInterval">Choose interval:</string>
    <string name="Interval">Interval:</string>
    <string name="startingDoseTerm">Starting dose term:</string>
    <string name="AddDate">Add date</string>
    <string name="chooseDate">Choose date:</string>
    <string name="chooseTime">Choose time:</string>
    <string name="chooseDayOfMonth">Choose day of month:</string>
    <string name="chooseDayOfWeek">Choose day of week:</string>
    <string name="add_new_drug">Add new drug</string>
    <string name="add_info">no additional information provided</string>
    <string name="edit_drug">Edit drug</string>
    <string name="confirm">Confirm</string>
    <string name="resign">Resign</string>

    <string name="alert_message" formatted="false">[DrugsOrganiser] \nUser %1s hasn\'t confirmed taking a dose of %2s.</string>
    <string name="alert_notification_comment" formatted="false">%1s, alert message was sent \nto your Contact Person</string>
    <string name="alarm_notification_title" formatted="false">%1s, time for %2s</string>
    <string name="alarm_notification_comment" formatted="false">Remember: %1s</string>
    <string name="sms_alert_details" formatted="false">[Details]\n   Drug: %1s \n   %2s   %3s</string>

    <string name="positive_button">Done</string>
    <string name="negative_button">Cancel</string>
    <string name="empty_name_error">Item\'s name cannot be empty!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drug_preview">Drug preview</string>
    <string name="adding_new_term">Adding new term</string>
    <string name="term_deleted_confirmation">Term successfully deleted!</string>
    <string name="term_added_confirmation">"New term successfully added!</string>
    <string name="important">Important</string>
    <string name="not_important">Not important</string>
    <string name="accepted">Accepted</string>
    <string name="unaccepted">Unaccepted</string>

    <!--SETTINGS-->
    <string name="action_settings">Settings</string>
    <string name="delete_confirmation_title">Drug delete confirmation</string>
    <string name="delete_confirmation_title_prompt">This option if selected will display delete confirmation dialog while removing drugs.</string>
    <string name="deleteConfirmationKey" translatable="false">deleteConfirmation</string>
    <string name="language">Language</string>
    <string name="language_prompt">Select language.</string>
    <string name="languageKey" translatable="false">language</string>
    <string name="Polish">Polish</string>
    <string name="english">English</string>

    <string-array name="dose_types_array">
        <item>tablet(s)</item>
        <item>ampoule(s)</item>
        <item>inhalation(s)</item>
        <item>ml(s)</item>
        <item>spoon(s)</item>
        <item>teaspoon(s)</item>
        <item>spigot(s)</item>
        <item>other</item>
    </string-array>

    <string-array name="dosage_array">
        <item>Regular dosage</item>
        <item>Constant interval</item>
        <item>Custom dosage</item>
    </string-array>

    <string-array name="time_units_array">
        <item>minute(s)</item>
        <item>hour(s)</item>
        <item>day(s)</item>
        <item>month(s)</item>
        <item>year(s)</item>
    </string-array>

    <string-array name="time_array">
        <item>day</item>
        <item>week</item>
        <item>month</item>
        <item>year</item>
    </string-array>

    <string-array name="time_array2">
        <item>hour(s)</item>
        <item>day(s)</item>
        <item>week(s)</item>
    </string-array>

    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

        <string-array name="listArray">
            <item>polski</item>
            <item>english</item>
        </string-array>

        <string-array name="listValues">
            <item>pl</item>
            <item>en</item>
        </string-array>


</resources>
