<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/schedule"
            android:icon="@drawable/ic_alarm_black_24dp"
            android:title="@string/schedule"/>
        <item
            android:id="@+id/nav_my_drugs"
            android:icon="@drawable/ic_add_alarm_black_24dp"
            android:title="@string/my_drugs" />
        <item
            android:id="@+id/last_doses"
            android:icon="@drawable/ic_alarm_on_black_24dp"
            android:title="@string/archive"/>

    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/contact_person"
                android:icon="@drawable/ic_contact_phone_black_24dp"
                android:title="@string/contact_person"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
