<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.drugsorganiser.ViewModel.DrugsActivity.LoginRegister.RegisterFragment">


    <TextView
        style="@style/NormalTextStyle"
        android:text="@string/login_prompt" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/etLogin"
        android:layout_weight="1" />


    <TextView
        style="@style/NormalTextStyle"
        android:textColor="@color/textColor"
        android:text="@string/password_prompt" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/etPassword"
        android:layout_weight="1" />

    <TextView
        style="@style/NormalTextStyle"
        android:text="@string/mail_prompt" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/etMail"
        android:layout_weight="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:id="@+id/btnRegister"
        android:text="@string/register"/>

</LinearLayout>
