<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.user.drugsorganiser.ViewModel.DrugsActivity.Organiser.MyDrugs.AddEditDrug.DateTimeCustomDosageFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chooseDate"
            android:textColor="@color/textColor"/>

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/datePicker3"
            android:spinnersShown="true"
            android:calendarViewShown="false"
            android:scaleY="1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chooseTime"
            android:textColor="@color/textColor"/>

        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleY="1"
            android:id="@+id/timePicker3"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0, 2"
            android:orientation="horizontal" >
            <TableRow >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:id="@+id/negative_button3"
                    android:background="@color/colorAccent"
                    android:text="@string/negative_button"/>
                <TextView android:layout_width="10dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:id="@+id/positive_button3"
                    android:background="@color/colorAccent"
                    android:text="@string/positive_button"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>