<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:title="@string/app_name"
            />

    </android.support.design.widget.AppBarLayout>



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:context="com.example.user.drugsorganiser.ViewModel.DrugsActivity.LoginRegisterFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="60dp"
        android:text="@string/welcome" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0, 1"
        android:orientation="horizontal" >
        <TableRow >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:text="@string/login"
                android:id="@+id/btnLoginTab"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:text="@string/register"
                android:id="@+id/btnRegisterTab"/>
        </TableRow>


    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/login_register_fragment">

    </LinearLayout>

    </LinearLayout>
</LinearLayout>
